--- a/.github/workflows/main_frontendtictactoe.yml
+++ b/.github/workflows/main_frontendtictactoe.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy JAR app to Azure Web App - FrontendTicTacToe
+name: Build and deploy Node.js app to Azure Web App - FrontendTicTacToe
 
 on:
   push:
@@ -12,40 +9,44 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up Java version
-        uses: actions/setup-java@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          java-version: '17'
-          distribution: 'microsoft'
+          node-version: '20'
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Install dependencies
+        run: npm install
 
-      - name: Upload artifact for deployment job
+      - name: Build project
+        run: npm run build
+
+      - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
-          name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          name: build-artifact
+          # Ajusta esto si tu build se genera en "build" o "dist"
+          path: |
+            dist
+            build
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-  
+      id-token: write
+      contents: read
+
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact from build
         uses: actions/download-artifact@v4
         with:
-          name: java-app
-      
+          name: build-artifact
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -54,10 +55,8 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1D20092B9DAD4CC2AE2370AFC9B9C163 }}
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'FrontendTicTacToe'
           slot-name: 'Production'
-          package: '*.jar'
-          
+          package: .
